  * Bugfix: There is now a 100% unique ID created for new contacts and groups
  * Bugfix: IDs created for new contacts/groups is now in the needed range
  * Bugfix: Fixed invisible mode bug. Now invisible contacts are shown correctly
  * Bugfix: Now it is possible to delete contact from contact list in Siemens build
  * "Use cp1251 hack" option is true by default in the russian build
  * Program asks user before exit if unread messages exist
  * Contact names can be changed locally till next list update from server
  * If selected the date and time on the splash screen is now located on top of the screen
  * Added Bulgarian translation
  
________________________________________________________________________________
VERSION 0.3.2

  * BUGFIX: Sending messages was not possible after renaming a contact
  * BUGFIX: Time bug (hopefully) fixed
  * ContactList title is now different depending on the length of the word "list"
  * Options subpages now have a back button so you can go back without saving
  * Added Polish translation
  
________________________________________________________________________________
VERSION 0.3.3
  * New module: Text messages history storing
  * NEW FEATURE: File explorer for file selection on supporting mobiles
  * NEW FEATURE: New SIEMENS2 version for Siemens MIDP2 phones with file explorer
  * There now is a back (cancel) option on the options pages
  * New option: Auto connect on startup
  * A message how to disable keylock is shown on splash screen if trying it the wrong way
  * Free heap mem can be seen at the bottom of about page
  * Name of recipient is shown on top of message edit field
  * On the ChatHistory screen you can now see how many chats are open and in which one you are
  * Contact names are now also updated on server list if renamed in Jimm
  * Added new option "Color scheme"
  * Added "Shadow connection" hack for Nokia 6230 users
  * Contact list sorts without case sensitivity now
  * Added Ukrainian translation
  